# spacetime_engine

./: Cargo.toml
engine/: Cargo.toml
engine/src/: lib.rs  world.rs
engine/src/behavior/: mod.rs
engine/src/collisions/: ray_cast.rs  shape_wrapper.rs
engine/src/math/: mod.rs  vec2.rs
engine/src/navigation/: external_navmesh.rs  navigation_agent.rs  target_reached_condition.rs  validated_navmesh.rs
engine/src/spells/: spell.rs
engine/src/utils/: entity.rs
macros/: Cargo.toml
macros/src/: lib.rs
npc/: Cargo.toml
src/: lib.rs  world.rs
src/behavior/: behavior_impl.rs  behavior_state.rs  mod.rs
src/collisions/: colliders.rs  mod.rs  ray_cast.rs  rigid_body.rs  shape_wrapper.rs  tick.rs  triggers.rs
src/math/: mod.rs  quat.rs  vec3.rs
src/navigation/: agent_state.rs  archipelago.rs  coordinates.rs  mod.rs  nav_meshes.rs  navigation_agent.rs  navigation_impl.rs  target_reached_condition.rs  utils.rs  validated_navmesh.rs
src/spells/: spell.rs
src/utils/: delta_time.rs  entity.rs  log_stopwatch.rs  mod.rs
