[package]
name = "spacetime_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
landmass = { path = "../../landmass/crates/landmass" }
spacetimedb = { version = "1.6.0" }
log = { version = "0.4.28" }
bon = { version = "3.8.1" }
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
